# nrl-euss-analysis

./: .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt
outputs/: report.md
outputs/models/: model_metrics.csv  pooled_fits.pkl
scripts/: run_pipeline.py
src/euss_cooling/: __init__.py  config.py  download.py  evaluate.py  ingest.py  models.py  plots.py  s3io.py  weather.py
tests/: test_models.py  test_weather_ingest.py
