[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "euss-cooling"
version = "0.1.0"
description = "Sensitivity of residential HVAC cooling load to outdoor temperature from NREL ResStock 2024.2 (TMY3)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "pyarrow>=14",
  "numpy>=1.24",
  "scipy>=1.10",
  "scikit-learn>=1.3",
  "statsmodels>=0.14",
  "matplotlib>=3.7",
  "seaborn>=0.12",
  "boto3>=1.28",
  "pvlib>=0.10",
  "pyyaml>=6.0",
  "tqdm>=4.65",
  "tabulate>=0.9",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
